@@ -18,3 +18,11 @@ zwave.pad.host=localhost
 ##
 # Port abstraction daemon (PAD) TCP port
 zwave.pad.port=7876
+
+#
+# Z-Wave security layer network key (128 bit key --> 16 bytes)
+#
+# Note that this is a secret key that is used for symmetric encryption. An attacker with access to this key
+# is able to decrypt Z-Wave commands and also send encrypted Z-Wave commands (e.g. send the encrypted
+# unlock command to a door lock device).
+zwave.networkKey=0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08, 0x09, 0x0A, 0x0B, 0x0C, 0x0D, 0x0E, 0x0F, 0x10
